<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adventure Club</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_create_story">Create new story</string>
    <string name="hello_adventurer">Hello, Adventurer </string>
    <string name="enter_name">Enter a nickname</string>
     <string name="default_nickname">Anonymous</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="local_stories">Local \n Story Nook</string>
    <string name="online_stories">Online \n Story Club</string>
    <string name="start_adventure">Start your adventure..</string>
    <string name="title_activity_story_list">StoryListActivity</string>
    <string name="author">Author: </string>
    <string name="title">Title: </string>
    <string name="genre">Genre: </string>
    <string name="synopsis">Synposis: </string>
    <string name="date">Publish Date: </string>
     <string name="download">Download</string>
    <string name="title_activity_local_stories">Local Stories</string>
    <string name="title_activity_story_info">StoryInfoActivity</string>
    <string name="title_activity_edit_story_information">Edit Story Info</string>
    <string name="done">Done</string>
    <string name="Blank" />
    <string name="hint_text_field">Enter text here</string>
    <string name="Button_SaveEditText">Save</string>
    <string name="Title_Annotations">Annotations</string>
    <string name="Title_Dashboard">Dashboard</string>
    <string name="dialog_message">Please fill in title before continuing</string>
    <string name="dialog_title">Warning!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_online_stories">Online Stories</string>
    <string name="view">View</string>
    <string name="read_story">Read</string>
    <string name="edit_story">Edit</string>
    <string name="delete_story">Delete</string>
    <string name="publish">Publish</string>
    <string name="change_info">Change info</string>
    <string name="add_fragment">Add fragment</string>
    <string name="add_fragment_title">Set Fragment Title</string>
    <string name="set">Set</string>
    <string name="bad_frag_title_msg">Cannot create fragment with empty title</string>
    <string name="bad_frag_delete_msg">Cannot delete starting fragment</string>
    <string name="add_branch_title">New Decision Branch Label</string>
    <string name="bad_branch_msg">Cannot create branch with empty label</string>
    <string name="no_internet">Action could not be completed because there is no internet connection</string>
    <string name="no_internet_library">Connect to the Internet to view online stories!</string>
     <string name="no_internet_annotation">Cannot publish annotation wtihout Internet connectivity! </string>
    <string name="title_decision_picker">Create Decision Branch</string>
    <string name="no_fragments">There are no story fragments to read</string>
    <string name="published">Story published to the Online Story Club!</string>
    <string name="cant_annotate">Cannot add new annotations to unpublished or modified stories</string>
    <string name="title_activity_help">Help</string>

    <!-- Dashboard -->
    <string name="dashboard_local">Local</string>
    <string name="dashboard_online">Online</string>
    <string name="dashboard_nook">Story Nook</string>
	<string name="dashboard_club">Story Club</string>
    
    <!-- Help page section titles -->
    <string name="help_title_online_story_club">1. Online Story Club*</string>
    <string name="help_title_story_nook">2. Story Nook</string>
    
    <!-- Help page headings -->
    <string name="help_heading_reading">Reading:</string>
    <string name="help_heading_annotating">Annotation:</string>
    <string name="help_editing">Editing:</string>
	<string name="help_publishing">Publishing*:</string>
	<string name="help_story_info">Story Info:</string>
	<string name="help_story_fragment">Story Fragment:</string>
	<string name="help_changing_starting_fragment">Changing the Starting Fragment:</string>
    
	<!-- Help page text -->
	<string name="help_dashboard">Change your nickname on the Dashboard!</string>
	<string name="help_1_reading_p1">Find a story you want to read by selecting or searching for one from the list of stories available online and tap “View” to experience the story online, or tap “Download” to save it to your Story Nook and for offline reading! Not sure which one to read? Tap the “I’m feeling lucky” to pick one randomly!</string>
    <string name="help_1_reading_p2">Pick a decision branch to progress the story, or if you’re feeling adventurous, you can pick the “I’m Feeling Lucky” button to pick a random decision!</string>
    <string name="help_1_annotating_p1">View annotations to a story fragment by switching to the Annotations tab. Add your own by tapping the + icon at the top and selecting the type of annotation you want to add from the menu and tap the “Post” button when you’re done!</string>
	<string name="help_2_reading_p1">Select or search for a story from your library and tap “View” to read it! Not sure which one to read? Tap the “I’m feeling lucky” to pick one randomly!</string>
    <string name="help_2_editing_p1">Long press an existing story in collection to open it for editing!</string>
	<string name="help_2_editing_storyinfo_p1">Opening a story in edit mode or pressing the menu button in the list of Story Fragments will allow you to make changes to the author, genre, and synopsis of the story on the Story Info page.</string>
	<string name="help_2_editing_storyfragment_p1">After tapping “View” on the Story Info page, edit a Story Fragment by selecting it from the list of Story Fragments. Add new illustrations of various media types and decision branches to the story by tapping the + icon at the top. Long pressing existing illustrations will allow you to change its position or delete them. Long pressing decision branch buttons will allow you to change its text and the Story Fragment it will lead to.</string>
	<string name="help_2_editing_changing_starting_fragment_p1">Long press Story Fragment from the list of Story Fragments to set it as the starting fragment.</string>
	<string name="help_2_publishing_p1">In the list of Story Fragments, press the menu button and select “Publish” to publish the current story to the Online Story Club!</string>
	
	<!-- Help page footnote -->
	<string name="help_footnote_1">* requires an internet connection</string>
	
</resources>
