<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hello_adventurer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello_adventurer" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:minWidth="64dp"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start_adventure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/start_adventure"
            android:textSize="40sp" />

        <Button
            android:id="@+id/online_stories"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#333333"
            android:longClickable="false"
            android:text="@string/online_stories"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/local_stories"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#333333"
            android:text="@string/local_stories"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

    </LinearLayout>

</LinearLayout>