<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/title" 
	        android:visibility="gone"/>
		
	    <ViewSwitcher
	        android:id="@+id/title_switch"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
	        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			    <EditText
			        android:id="@+id/enter_title"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:visibility="gone"/>
    		</LinearLayout>  		
    		<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		     <TextView
		        android:id="@+id/label_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"/>
    		</LinearLayout>       
    	</ViewSwitcher>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/author"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/author" />
		
	    <ViewSwitcher
	        android:id="@+id/author_switch"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
	        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			    <EditText
			        android:id="@+id/enter_author"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"/>
    		</LinearLayout>  		
    		<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		     <TextView
		        android:id="@+id/label_author"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"/>
    		</LinearLayout>       
    	</ViewSwitcher>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/date" />
	    
	    <TextView
	        android:id="@+id/enter_date"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="10dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/genre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/genre" />
		
	    <ViewSwitcher
	        android:id="@+id/genre_switch"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
	        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			    <EditText
			        android:id="@+id/enter_genre"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"/>
    		</LinearLayout>  		
    		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		     <TextView
		        android:id="@+id/label_genre"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"/>
    		</LinearLayout>       
    	</ViewSwitcher>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/synopsis"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/synopsis" />
		
	    <ViewSwitcher
	        android:id="@+id/synopsis_switch"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
	        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			    <EditText
			        android:id="@+id/enter_synopsis"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"/>
    		</LinearLayout>  		
    		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			     <TextView
			        android:id="@+id/label_synopsis"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"/>
    		</LinearLayout>       
    	</ViewSwitcher>
    </LinearLayout>
   
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
        
            <Button
            android:id="@+id/view"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="#333333"
            android:text="@string/view"
            android:textColor="#FFFFFF"
            android:textSize="15sp" 
            android:visibility="gone" />
               
            <Button
            android:id="@+id/download"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="#333333"
            android:text="@string/download"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="gone" />
                              
            <Button
            android:id="@+id/done"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="#333333"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="gone" />
          
    </LinearLayout>

</LinearLayout>
