<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
	    <TextView
	        android:id="@+id/textView0"
	        android:paddingBottom="5dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/help_dashboard" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/help_title_online_story_club"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:text="@string/help_heading_reading"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView3"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_1_reading_p1" />

	    <TextView
	        android:id="@+id/textView4"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_1_reading_p2" />

	    <TextView
	        android:id="@+id/textView5"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_heading_annotating"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView6"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView7"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Large Text"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView8"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView9"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView10"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView11"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView12"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView13"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView14"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView15"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView16"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView17"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView18"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView19"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textView20"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Small Text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	</LinearLayout>
</ScrollView>
